compiler/4/dates.output
State 15 conflicts: 1 shift/reduce
State 49 conflicts: 1 shift/reduce
State 50 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program statement
    2        | ε

    3 statement: date_exp SEMICOLON
    4          | period_exp SEMICOLON
    5          | int_exp SEMICOLON
    6          | SEMICOLON
    7          | error SEMICOLON

    8 int_exp: int_exp PLUS int_term
    9        | int_exp HYPHEN int_term
   10        | int_term

   11 int_term: int_term ASTERISK int_factor
   12         | int_term SLASH int_factor
   13         | int_factor

   14 int_factor: OPENPAREN int_exp CLOSEPAREN
   15           | HYPHEN int_factor
   16           | PLUS int_factor
   17           | NUM

   18 period_exp: OPENBRACE period_body CLOSEBRACE
   19           | PERIOD

   20 period_body: period_exp PLUS period_exp
   21            | period_exp HYPHEN period_exp
   22            | date_exp HYPHEN date_exp
   23            | period_exp ASTERISK int_exp
   24            | int_exp ASTERISK period_exp
   25            | period_exp SLASH int_exp

   26 date_exp: OPENBRACKET date_body CLOSEBRACKET
   27         | DATE

   28 date_body: date_exp PLUS period_exp
   29          | period_exp PLUS date_exp
   30          | date_exp HYPHEN period_exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7
    DATE (258) 27
    PERIOD (259) 19
    NUM (260) 17
    PLUS (261) 8 16 20 28 29
    HYPHEN (262) 9 15 21 22 30
    ASTERISK (263) 11 23 24
    SLASH (264) 12 25
    OPENPAREN (265) 14
    CLOSEPAREN (266) 14
    OPENBRACKET (267) 26
    CLOSEBRACKET (268) 26
    OPENBRACE (269) 18
    CLOSEBRACE (270) 18
    SEMICOLON (271) 3 4 5 6 7


Nonterminals, with rules where they appear

    $accept (17)
        on left: 0
    program (18)
        on left: 1 2
        on right: 0 1
    statement (19)
        on left: 3 4 5 6 7
        on right: 1
    int_exp (20)
        on left: 8 9 10
        on right: 5 8 9 14 23 24 25
    int_term (21)
        on left: 11 12 13
        on right: 8 9 10 11 12
    int_factor (22)
        on left: 14 15 16 17
        on right: 11 12 13 15 16
    period_exp (23)
        on left: 18 19
        on right: 4 20 21 23 24 25 28 29 30
    period_body (24)
        on left: 20 21 22 23 24 25
        on right: 18
    date_exp (25)
        on left: 26 27
        on right: 3 22 28 29 30
    date_body (26)
        on left: 28 29 30
        on right: 26


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (program)

    program  go to state 1


State 1

    0 $accept: program • $end
    1 program: program • statement

    $end         shift, and go to state 2
    error        shift, and go to state 3
    DATE         shift, and go to state 4
    PERIOD       shift, and go to state 5
    NUM          shift, and go to state 6
    PLUS         shift, and go to state 7
    HYPHEN       shift, and go to state 8
    OPENPAREN    shift, and go to state 9
    OPENBRACKET  shift, and go to state 10
    OPENBRACE    shift, and go to state 11
    SEMICOLON    shift, and go to state 12

    statement   go to state 13
    int_exp     go to state 14
    int_term    go to state 15
    int_factor  go to state 16
    period_exp  go to state 17
    date_exp    go to state 18


State 2

    0 $accept: program $end •

    $default  accept


State 3

    7 statement: error • SEMICOLON

    SEMICOLON  shift, and go to state 19


State 4

   27 date_exp: DATE •

    $default  reduce using rule 27 (date_exp)


State 5

   19 period_exp: PERIOD •

    $default  reduce using rule 19 (period_exp)


State 6

   17 int_factor: NUM •

    $default  reduce using rule 17 (int_factor)


State 7

   16 int_factor: PLUS • int_factor

    NUM        shift, and go to state 6
    PLUS       shift, and go to state 7
    HYPHEN     shift, and go to state 8
    OPENPAREN  shift, and go to state 9

    int_factor  go to state 20


State 8

   15 int_factor: HYPHEN • int_factor

    NUM        shift, and go to state 6
    PLUS       shift, and go to state 7
    HYPHEN     shift, and go to state 8
    OPENPAREN  shift, and go to state 9

    int_factor  go to state 21


State 9

   14 int_factor: OPENPAREN • int_exp CLOSEPAREN

    NUM        shift, and go to state 6
    PLUS       shift, and go to state 7
    HYPHEN     shift, and go to state 8
    OPENPAREN  shift, and go to state 9

    int_exp     go to state 22
    int_term    go to state 15
    int_factor  go to state 16


State 10

   26 date_exp: OPENBRACKET • date_body CLOSEBRACKET

    DATE         shift, and go to state 4
    PERIOD       shift, and go to state 5
    OPENBRACKET  shift, and go to state 10
    OPENBRACE    shift, and go to state 11

    period_exp  go to state 23
    date_exp    go to state 24
    date_body   go to state 25


State 11

   18 period_exp: OPENBRACE • period_body CLOSEBRACE

    DATE         shift, and go to state 4
    PERIOD       shift, and go to state 5
    NUM          shift, and go to state 6
    PLUS         shift, and go to state 7
    HYPHEN       shift, and go to state 8
    OPENPAREN    shift, and go to state 9
    OPENBRACKET  shift, and go to state 10
    OPENBRACE    shift, and go to state 11

    int_exp      go to state 26
    int_term     go to state 15
    int_factor   go to state 16
    period_exp   go to state 27
    period_body  go to state 28
    date_exp     go to state 29


State 12

    6 statement: SEMICOLON •

    $default  reduce using rule 6 (statement)


State 13

    1 program: program statement •

    $default  reduce using rule 1 (program)


State 14

    5 statement: int_exp • SEMICOLON
    8 int_exp: int_exp • PLUS int_term
    9        | int_exp • HYPHEN int_term

    PLUS       shift, and go to state 30
    HYPHEN     shift, and go to state 31
    SEMICOLON  shift, and go to state 32


State 15

   10 int_exp: int_term •
   11 int_term: int_term • ASTERISK int_factor
   12         | int_term • SLASH int_factor

    ASTERISK  shift, and go to state 33
    SLASH     shift, and go to state 34

    ASTERISK  [reduce using rule 10 (int_exp)]
    $default  reduce using rule 10 (int_exp)


State 16

   13 int_term: int_factor •

    $default  reduce using rule 13 (int_term)


State 17

    4 statement: period_exp • SEMICOLON

    SEMICOLON  shift, and go to state 35


State 18

    3 statement: date_exp • SEMICOLON

    SEMICOLON  shift, and go to state 36


State 19

    7 statement: error SEMICOLON •

    $default  reduce using rule 7 (statement)


State 20

   16 int_factor: PLUS int_factor •

    $default  reduce using rule 16 (int_factor)


State 21

   15 int_factor: HYPHEN int_factor •

    $default  reduce using rule 15 (int_factor)


State 22

    8 int_exp: int_exp • PLUS int_term
    9        | int_exp • HYPHEN int_term
   14 int_factor: OPENPAREN int_exp • CLOSEPAREN

    PLUS        shift, and go to state 30
    HYPHEN      shift, and go to state 31
    CLOSEPAREN  shift, and go to state 37


State 23

   29 date_body: period_exp • PLUS date_exp

    PLUS  shift, and go to state 38


State 24

   28 date_body: date_exp • PLUS period_exp
   30          | date_exp • HYPHEN period_exp

    PLUS    shift, and go to state 39
    HYPHEN  shift, and go to state 40


State 25

   26 date_exp: OPENBRACKET date_body • CLOSEBRACKET

    CLOSEBRACKET  shift, and go to state 41


State 26

    8 int_exp: int_exp • PLUS int_term
    9        | int_exp • HYPHEN int_term
   24 period_body: int_exp • ASTERISK period_exp

    PLUS      shift, and go to state 30
    HYPHEN    shift, and go to state 31
    ASTERISK  shift, and go to state 42


State 27

   20 period_body: period_exp • PLUS period_exp
   21            | period_exp • HYPHEN period_exp
   23            | period_exp • ASTERISK int_exp
   25            | period_exp • SLASH int_exp

    PLUS      shift, and go to state 43
    HYPHEN    shift, and go to state 44
    ASTERISK  shift, and go to state 45
    SLASH     shift, and go to state 46


State 28

   18 period_exp: OPENBRACE period_body • CLOSEBRACE

    CLOSEBRACE  shift, and go to state 47


State 29

   22 period_body: date_exp • HYPHEN date_exp

    HYPHEN  shift, and go to state 48


State 30

    8 int_exp: int_exp PLUS • int_term

    NUM        shift, and go to state 6
    PLUS       shift, and go to state 7
    HYPHEN     shift, and go to state 8
    OPENPAREN  shift, and go to state 9

    int_term    go to state 49
    int_factor  go to state 16


State 31

    9 int_exp: int_exp HYPHEN • int_term

    NUM        shift, and go to state 6
    PLUS       shift, and go to state 7
    HYPHEN     shift, and go to state 8
    OPENPAREN  shift, and go to state 9

    int_term    go to state 50
    int_factor  go to state 16


State 32

    5 statement: int_exp SEMICOLON •

    $default  reduce using rule 5 (statement)


State 33

   11 int_term: int_term ASTERISK • int_factor

    NUM        shift, and go to state 6
    PLUS       shift, and go to state 7
    HYPHEN     shift, and go to state 8
    OPENPAREN  shift, and go to state 9

    int_factor  go to state 51


State 34

   12 int_term: int_term SLASH • int_factor

    NUM        shift, and go to state 6
    PLUS       shift, and go to state 7
    HYPHEN     shift, and go to state 8
    OPENPAREN  shift, and go to state 9

    int_factor  go to state 52


State 35

    4 statement: period_exp SEMICOLON •

    $default  reduce using rule 4 (statement)


State 36

    3 statement: date_exp SEMICOLON •

    $default  reduce using rule 3 (statement)


State 37

   14 int_factor: OPENPAREN int_exp CLOSEPAREN •

    $default  reduce using rule 14 (int_factor)


State 38

   29 date_body: period_exp PLUS • date_exp

    DATE         shift, and go to state 4
    OPENBRACKET  shift, and go to state 10

    date_exp  go to state 53


State 39

   28 date_body: date_exp PLUS • period_exp

    PERIOD     shift, and go to state 5
    OPENBRACE  shift, and go to state 11

    period_exp  go to state 54


State 40

   30 date_body: date_exp HYPHEN • period_exp

    PERIOD     shift, and go to state 5
    OPENBRACE  shift, and go to state 11

    period_exp  go to state 55


State 41

   26 date_exp: OPENBRACKET date_body CLOSEBRACKET •

    $default  reduce using rule 26 (date_exp)


State 42

   24 period_body: int_exp ASTERISK • period_exp

    PERIOD     shift, and go to state 5
    OPENBRACE  shift, and go to state 11

    period_exp  go to state 56


State 43

   20 period_body: period_exp PLUS • period_exp

    PERIOD     shift, and go to state 5
    OPENBRACE  shift, and go to state 11

    period_exp  go to state 57


State 44

   21 period_body: period_exp HYPHEN • period_exp

    PERIOD     shift, and go to state 5
    OPENBRACE  shift, and go to state 11

    period_exp  go to state 58


State 45

   23 period_body: period_exp ASTERISK • int_exp

    NUM        shift, and go to state 6
    PLUS       shift, and go to state 7
    HYPHEN     shift, and go to state 8
    OPENPAREN  shift, and go to state 9

    int_exp     go to state 59
    int_term    go to state 15
    int_factor  go to state 16


State 46

   25 period_body: period_exp SLASH • int_exp

    NUM        shift, and go to state 6
    PLUS       shift, and go to state 7
    HYPHEN     shift, and go to state 8
    OPENPAREN  shift, and go to state 9

    int_exp     go to state 60
    int_term    go to state 15
    int_factor  go to state 16


State 47

   18 period_exp: OPENBRACE period_body CLOSEBRACE •

    $default  reduce using rule 18 (period_exp)


State 48

   22 period_body: date_exp HYPHEN • date_exp

    DATE         shift, and go to state 4
    OPENBRACKET  shift, and go to state 10

    date_exp  go to state 61


State 49

    8 int_exp: int_exp PLUS int_term •
   11 int_term: int_term • ASTERISK int_factor
   12         | int_term • SLASH int_factor

    ASTERISK  shift, and go to state 33
    SLASH     shift, and go to state 34

    ASTERISK  [reduce using rule 8 (int_exp)]
    $default  reduce using rule 8 (int_exp)


State 50

    9 int_exp: int_exp HYPHEN int_term •
   11 int_term: int_term • ASTERISK int_factor
   12         | int_term • SLASH int_factor

    ASTERISK  shift, and go to state 33
    SLASH     shift, and go to state 34

    ASTERISK  [reduce using rule 9 (int_exp)]
    $default  reduce using rule 9 (int_exp)


State 51

   11 int_term: int_term ASTERISK int_factor •

    $default  reduce using rule 11 (int_term)


State 52

   12 int_term: int_term SLASH int_factor •

    $default  reduce using rule 12 (int_term)


State 53

   29 date_body: period_exp PLUS date_exp •

    $default  reduce using rule 29 (date_body)


State 54

   28 date_body: date_exp PLUS period_exp •

    $default  reduce using rule 28 (date_body)


State 55

   30 date_body: date_exp HYPHEN period_exp •

    $default  reduce using rule 30 (date_body)


State 56

   24 period_body: int_exp ASTERISK period_exp •

    $default  reduce using rule 24 (period_body)


State 57

   20 period_body: period_exp PLUS period_exp •

    $default  reduce using rule 20 (period_body)


State 58

   21 period_body: period_exp HYPHEN period_exp •

    $default  reduce using rule 21 (period_body)


State 59

    8 int_exp: int_exp • PLUS int_term
    9        | int_exp • HYPHEN int_term
   23 period_body: period_exp ASTERISK int_exp •

    PLUS    shift, and go to state 30
    HYPHEN  shift, and go to state 31

    $default  reduce using rule 23 (period_body)


State 60

    8 int_exp: int_exp • PLUS int_term
    9        | int_exp • HYPHEN int_term
   25 period_body: period_exp SLASH int_exp •

    PLUS    shift, and go to state 30
    HYPHEN  shift, and go to state 31

    $default  reduce using rule 25 (period_body)


State 61

   22 period_body: date_exp HYPHEN date_exp •

    $default  reduce using rule 22 (period_body)
